k8s/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-camels
  namespace: expertlab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-camels
  template:
    metadata:
      labels:
        app: frontend-camels
    spec:
      containers:
      - name: frontend-camels
        image: sandropxl/expertlab4-fe
        ports:
        - containerPort: 80          

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-camels
  namespace: expertlab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-camels
  template:
    metadata:
      labels:
        app: backend-camels
    spec:
      containers:
      - name: backend-camels
        image: sandropxl/expertlab4-be
        ports:
        - containerPort: 3000
