k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-camels
  namespace: expertlab
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: "/"
        pathType: Prefix        
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: "/api"
        pathType: Prefix        
        backend:
          service:
            name: backend-svc
            port:
              number: 3000
